# Repository

./: README.md
3D Transformation - C++ (Computer Graphics)/Code/: compile_run.sh
3D Transformation - C++ (Computer Graphics)/Code/Source/: CMakeLists.txt  parameters.txt  rasterizer.hpp
ALU simulator - Verilog (Computer Architecture)/Code/: ALU.v  makefile  test_ALU.v  wave  wave.vcd
BOLA Thesis Code Reproduction - Python (Computer Networks)/Code/: simulator.py  studentComm.py
BinarySearchTree & Dijkstra (Data Structures)/Code/: dijkstra_ver5.cpp
DMA Buffer - C (Operating Systems)/Code/: main.c  test.c
Efficient Hop-Constrained s-t Simple Path Enumeration - C++ (Research)/: Complete Report.docx  Progress Report 1.docx  Progress Report 2.docx
Geomotry Modeling - C++ (Computer Graphics)/Code/: CMakeLists.txt
Gradient Methods - Python (Optimization)/Code/: problem1.py  problem2b.py  problem3b.py  problem4a_GlobalizedNewton.py
Internship/Database Update Detection Alert Script - Python&Airflow/: 70_db_check.py  README.md  his_bopu_db_check.py  my_config.py  wind_db_check_alert.py
Internship/Google Patent Crawler Script - Python&Requests&Clickhouse&Mysql&Multiprocessing&Threading/: README.md  db.sql
Microsoft Internship Work Record - C#&Python&Selenium/: AutoAlertTrigger.py
Parallel N-Body Simulation - C++&OpenMP&Pthread&MPI&CUDA (Parallel Programming)/: README.md
Red Wine Decision Tree (Introduction to Computer Science Programming Methodology)/: report.docx
Snake - Python (Introduction to Computer Science Programming Paradigms)/: Code.py
(+265 files in other folders)
